--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start": "NODE_ENV=production && node index.js",
+    "dev": "nodemon .",
+    "snyk": "snyk test"
   },
   "repository": {
     "type": "git",
@@ -20,5 +23,10 @@
     "co-body": "^5.1.1",
     "koa": "^2.4.1",
     "koa-router": "^7.3.0"
+  },
+  "devDependencies": {
+    "jest": "^21.2.1",
+    "nodemon": "^1.12.1",
+    "snyk": "^1.52.0"
   }
 }
