--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "co-body": "^5.1.1",
     "koa": "^2.4.1",
+    "koa-helmet": "^3.3.0",
     "koa-router": "^7.3.0"
   },
   "devDependencies": {
