--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "NODE_ENV=production && node index.js",
-    "dev": "nodemon .",
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon .",
     "snyk": "snyk test"
   },
   "repository": {
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "jest": "^21.2.1",
+    "koa-logger": "^3.1.0",
     "nodemon": "^1.12.1",
     "snyk": "^1.52.0"
   }
