--- a/package.json
+++ b/package.json
@@ -23,12 +23,17 @@
     "co-body": "^5.1.1",
     "koa": "^2.4.1",
     "koa-helmet": "^3.3.0",
-    "koa-router": "^7.3.0"
+    "koa-router": "^7.3.0",
+    "mongoose": "^5.0.1",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "jest": "^21.2.1",
     "koa-logger": "^3.1.0",
-    "nodemon": "^1.12.1",
+    "nodemon": "^1.14.11",
     "snyk": "^1.52.0"
+  },
+  "prettier": {
+    "tabWidth": 4
   }
 }
