--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "jest": "^21.2.1",
     "koa-logger": "^3.1.0",
     "nodemon": "^1.14.11",
-    "snyk": "^1.52.0"
+    "snyk": "^1.52.0",
+    "supertest": "^3.0.0"
   },
   "prettier": {
     "tabWidth": 4
