--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "NODE_ENV=test jest",
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development nodemon .",
     "snyk": "snyk test"
