--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "homepage": "https://github.com/danielstaleiny/koa#readme",
   "dependencies": {
     "co-body": "^5.1.1",
+    "dotenv": "^5.0.0",
+    "emailjs": "^1.0.12",
     "koa": "^2.4.1",
     "koa-helmet": "^3.3.0",
     "koa-router": "^7.3.0",
-    "mongoose": "^5.0.1",
+    "mongoose": "^5.0.6",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
