prettier changes and re-styling

--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "supertest": "^3.0.0"
   },
   "prettier": {
-    "tabWidth": 4
+    "tabWidth": 4,
+    "semi": false,
+		"singleQuote": true,
+		"bracketSpacing": true
   }
 }
