--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/danielstaleiny/koa#readme",
   "dependencies": {
+    "boom": "^7.1.1",
     "co-body": "^5.1.1",
     "dotenv": "^5.0.0",
     "koa": "^2.5.0",
@@ -39,7 +40,7 @@
   "prettier": {
     "tabWidth": 4,
     "semi": false,
-		"singleQuote": true,
-		"bracketSpacing": true
+    "singleQuote": true,
+    "bracketSpacing": true
   }
 }
