--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "koa-test-setup",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test jest",
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV=development nodemon .",
-    "snyk": "snyk test"
+    "snyk": "snyk test",
+    "patch": "release patch",
+    "minor": "release minor",
+    "major": "release major"
   },
   "repository": {
     "type": "git",
@@ -34,6 +37,7 @@
     "jest": "^21.2.1",
     "koa-logger": "^3.1.0",
     "nodemon": "^1.15.1",
+    "release": "^3.1.6",
     "snyk": "^1.69.9",
     "supertest": "^3.0.0"
   },
